# shadow-soul

./: .env.local  .gitignore  .vercelignore  Anchor.toml  Cargo.toml  GROTH16_GUIDE.md  MAINNET_GUIDE.md  README.md  SETUP_GUIDE.md  deploy.sh  init-all-pools.js  init-pool.js  initialize-pools.js  logo-preview.html  next.config.js  package-lock.json  package.json  preview-final.html  preview-with-logo.html  preview.html  setup.sh  shadow_pool.json  tailwind.config.js  vercel.json
app/: package-lock.json  package.json  tsconfig.json
app/components/: GlitchText.tsx  Humanship.tsx  Modal.tsx  ParticleBackground.tsx  PrivacyPool.tsx
app/hooks/: useLocalStorage.ts  useShadowSoul.ts
app/lib/: store.ts
app/pages/: 404.tsx  _app.tsx  app.tsx  docs.tsx  faq.tsx  index.tsx
app/src/idl/: shadow_pool.json
app/styles/: globals.css
circuits/: build.sh  commitment.circom  humanship.circom  merkleTree.circom  poseidon.circom  withdraw.circom
components/: GlitchText.tsx  Layout.tsx  Loading.tsx  MatrixRain.tsx  StealthAddress.tsx
hooks/: useShadowSoul.ts
pages/: _app.tsx  app.tsx  faq.tsx  index.tsx
pages/api/: rpc.ts
programs/shadow-pool/: Anchor.toml  Cargo.toml
programs/shadow-pool/src/: constants.rs  errors.rs  lib.rs
sdk/: package-lock.json  package.json
sdk/src/: client.ts  commitment.ts  config.ts  index.ts  merkle.ts  proofs.ts  stealth.ts  types.ts  utils.ts
